# sqlalchemy-fsm

./: .gitignore  .pdm-python  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml  release.yml
src/sqlalchemy_fsm/: __init__.py  bound.py  cache.py  column.py  events.py  exc.py  introspection.py  meta.py  sqltypes.py  testing.py  transition.py  util.py  validation.py
src/sqlalchemy_fsm/extras/: __init__.py  alembic.py  graph.py
tests/: conftest.py  test_alembic.py  test_async.py  test_basic.py  test_borrowed.py  test_conditionals.py  test_coverage.py  test_descriptor_edges.py  test_edge_cases.py  test_events.py  test_graph.py  test_invalids.py  test_multi_column.py  test_multi_source.py  test_performance.py  test_permissions.py  test_properties.py  test_transition_classes.py  test_typing.py  test_validation.py
